--- a/composeApp/src/androidMain/res/drawable/rick_and_morty_home.xml
+++ b/composeApp/src/androidMain/res/drawable/rick_and_morty_home.xml
@@ -5,11 +5,11 @@
     android:viewportHeight="321">
   <group android:scaleY="0.91714287"
       android:translateY="13.298572">
-    <path
-        android:pathData="M25,0h300v95.57h-300z"
-        android:fillColor="url(#pattern0_237_878)"/>
-    <path
-        android:pathData="M0,48h350v272.29h-350z"
-        android:fillColor="url(#pattern1_237_878)"/>
+<!--    <path-->
+<!--        android:pathData="M25,0h300v95.57h-300z"-->
+<!--        android:fillColor="url(#pattern0_237_878)"/>-->
+<!--    <path-->
+<!--        android:pathData="M0,48h350v272.29h-350z"-->
+<!--        android:fillColor="url(#pattern1_237_878)"/>-->
   </group>
 </vector>
